kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx2.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-nginx.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx2
                port:
                  number: 80
    - host: database.local
      http:
        paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: database
                  port:
                    number: 33033
